# sugar

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/agents/: quality-guardian.md
.claude/hooks/: ensure-venv.sh  pre-bash.sh  session_venv.sh  setup-dev-env.sh  venv_activator.py  wrap-bash-with-venv.sh
docs/dev/: contributing.md
sugar/: main.py
sugar/core/: loop.py
sugar/discovery/: code_quality.py  error_monitor.py  github_watcher.py  test_coverage.py
sugar/executor/: claude_wrapper.py  structured_request.py
sugar/learning/: adaptive_scheduler.py  feedback_processor.py
sugar/quality_gates/: __init__.py  coordinator.py  diff_validator.py  evidence.py  failure_handler.py  functional_verifier.py  preflight_checks.py  success_criteria.py  test_validator.py  truth_enforcer.py
sugar/storage/: task_type_manager.py  work_queue.py
sugar/utils/: git_operations.py
sugar/workflow/: orchestrator.py
tests/: conftest.py  test_cli.py  test_core_loop.py  test_hold_functionality.py  test_quality_gates.py  test_storage.py  test_task_types.py
tests/plugin/: test_integration.py  test_structure.py
