[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sugarai"
version = "2.1.0"
description = "Sugar ðŸ° - A dev team that never stops. Delegate full tasks to AI in the background."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Steven Leggett", email = "contact@roboticforce.io"}
]
keywords = ["claude", "autonomous", "development", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance"
]

dependencies = [
    "click>=8.1.8",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "asyncio-throttle>=1.0.2",
    "setuptools>=75.0.0"
]

[project.optional-dependencies]
github = ["PyGithub>=2.5.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "safety>=3.0.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
    "types-setuptools>=75.0.0"
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0"
]

[project.scripts]
sugar = "sugar.main:cli"

[project.urls]
Homepage = "https://github.com/cdnsteve/sugar"
Documentation = "https://docs.roboticforce.io/sugar"
Repository = "https://github.com/cdnsteve/sugar"
"Bug Tracker" = "https://github.com/cdnsteve/sugar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sugar*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D",      # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D200",   # One-line docstring should fit on one line
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D205",   # 1 blank line required between summary line and description
    "D212",   # Multi-line docstring summary should start at the first line
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "D400",   # First line should end with a period
    "D401",   # First line of docstring should be in imperative mood
    "D415",   # First line should end with a period, question mark, or exclamation point
    "E501",   # Line too long (handled by formatter where possible)
    "E722",   # Do not use bare except (existing codebase pattern)
    "W291",   # Trailing whitespace (in docstrings)
    "W293",   # Blank line contains whitespace
    "B904",   # Raise without from inside except (existing pattern)
    "B007",   # Loop control variable not used within loop body
    "F401",   # Imported but unused (some are for re-export or conditional)
    "F841",   # Local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "F841", "B007"]  # Ignore docstring rules and unused vars in tests
"sugar/main.py" = ["F811"]  # Allow function redefinition for CLI grouping

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["sugar"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "venv/*",
    ".venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=sugar --cov-branch --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]